--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,5 +1,3 @@
-@use './variables';
-
 *{
   margin: 0;
   padding: 0;
@@ -7,11 +5,11 @@
 }
 
 body {
-  font-family: variables.$font-satoshi;
+  font-family: $font-satoshi;
 }
 
 section {
-  background-color: variables.$color-primary;
+  background-color: $color-primary;
   padding-inline: 1.5rem;
 }
 
