--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,3 @@
-@import '../base/variables';
-
 header {
   background-color: $color-primary;
   color: $font-color-primary;
@@ -8,5 +6,9 @@ header {
   
   h1{
     font-weight: $font-weight-medium;
+
+    @include media ("<=sm") {
+      font-size: 1.3rem;
+    }
   }
 }
