--- a/src/scss/pages/main/_jokegenerator.scss
+++ b/src/scss/pages/main/_jokegenerator.scss
@@ -1,5 +1,3 @@
-@use '../../base/variables' as v;
-
 .generator-section {
   padding-block: 8rem;
   
@@ -13,15 +11,19 @@
       margin-top: 2rem;
       border-radius: 1rem;
       cursor: pointer;
-      border: solid 1px v.$color-primary;
-      color: v.$color-primary;
+      border: solid 1px $color-primary;
+      color: $color-primary;
       font-size: 1rem;
       transition: all 0.4s ease-in-out;
 
       &:hover {
-        background-color: v.$color-primary;
-        border-color: v.$font-color-primary;
-        color: v.$font-color-primary;
+        background-color: $color-primary;
+        border-color: $font-color-primary;
+        color: $font-color-primary;
+      }
+
+      @include media ("<=lg") {
+        width: 30%;
       }
     }
   }
@@ -29,13 +31,32 @@
   .joke-output {
     text-align: center;
     margin-block: 6rem;
-    color: v.$font-color-primary;
-    font-weight: v.$font-weight-medium;
+    color: $font-color-primary;
+    font-weight: $font-weight-medium;
+
+    @include media ("<=sm") {
+      font-size: 1rem;
+    }
   }
 }
 
 .generator-section-title {
-  color: v.$font-color-primary;
+  color: $font-color-primary;
   font-size: 3rem;
-  font-weight: v.$font-weight-regular;
+  font-weight: $font-weight-regular;
+
+  @include media ("<=sm") {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  @include media ("<=md") {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  @include media ("<=lg") {
+    text-align: center;
+    font-size: 2.75rem;
+  }
 }
